Дорабатываю страницу подачи объявления

--- a/css/ads_views.css
+++ b/css/ads_views.css
@@ -139,3 +139,15 @@
     float: left;
     margin-right: 30px;
 }
+
+/*******************  *******************/
+/*******************  *******************/
+/*******************  *******************/
+.rating {
+    color: #ffc107;
+    font-size: 12px;
+}
+.ad-secondary-text {
+    color: #686868;
+    font-size: 12px;
+}
