--- a/css/add_ad.css
+++ b/css/add_ad.css
@@ -101,4 +101,12 @@
 }
 
 
-
+.payment-method-cashless {
+    display: none;
+}
+.payment-method-wallet a {
+    font-size: 10px;
+}
+.payment-method-wallet a:hover {
+    text-decoration: none;
+}
