--- a/css/global.css
+++ b/css/global.css
@@ -3,6 +3,21 @@ html, body {
     font-family: Roboto;
 }
 /**/
+/************************ Глобальные стили ************************/
+/**/
+.h6 {
+    font-weight: normal;
+    font-size: 12px;
+}
+.h5 {
+    font-weight: normal;
+    font-size: 14px;
+}
+.h4 {
+    font-size: 16px;
+}
+
+/**/
 /************************ Навигационное меню ************************/
 /**/
 /* Десктопное меню */
