--- a/css/ads_views.css
+++ b/css/ads_views.css
@@ -143,7 +143,7 @@
 /*******************  *******************/
 /*******************  *******************/
 /*******************  *******************/
-.rating {
+.rating, .rating:hover {
     color: #ffc107;
     font-size: 12px;
 }
