Работаю над страницей сообщений

--- a/css/messages.css
+++ b/css/messages.css
@@ -2,6 +2,9 @@
 .messages-box {
     height: 500px;
 }
+.btn-send-message {
+    font-size: 18px;
+}
 
 /*******************  *******************/
 .chat-thumb:hover {
