Делаю страницу сообщений

--- a/css/messages.css
+++ b/css/messages.css
@@ -5,6 +5,9 @@
 .btn-send-message {
     font-size: 18px;
 }
+.btn-add-file-message {
+    font-size: 18px;
+}
 
 /*******************  *******************/
 .chat-thumb:hover {
